samples/_failures_safe/1761266688_5e8eef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_853affde.c: In function ‘main’:
./samples/SAFE/__tmp_853affde.c:168:5: error: expected expression at end of input
  168 |     if (strlen(buffer) == 0)
      |     ^~
./samples/SAFE/__tmp_853affde.c:168:5: error: expected declaration or statement at end of input
